PTI-536: Anonymous Records (#346)
* PTI-536: Anonymous Records - Api changes
- Added business logic to determine anonymity
- Controllers check business logic on create/edit
- Added support for publishing/unpublishing documents and s3 objects

* PTI-536: Anonymous Records - Add s3 signed url anchor component
- component wraps an anchor, fetching a signed s3 url on click, and re-clicking using the new url

* PTI-536: Update unit tests.

* PTI-536: Code review updates
- Move business logic to business-logic-manager.js
- Update instances of 'nris' to 'nris-epd', where appropriate
- Update swagger enums
